@@ -7,6 +7,7 @@ Summary of important user-visible changes for dist-zilla-pluginbundle-Bioperl
     from [AutoMetaResources].  Note that [MetaResources] was not expand
     %{dist} on bugtracker.web and therefore previous versions had incorrect
     links to the bugtracker.
+  * Removed use of Authority plugin as it is now obsolete in perl5.
 
 0.23      2014-09-05 09:46:02-05:00 America/Chicago
   * Add [ExtraTests] in cases where we want to only run tests for release
